Update checker framework